@@ -28,7 +28,8 @@ Simple publisher confirmations are supported by all three factories.
 When configuring a `RabbitTemplate` to use a xref:amqp/template.adoc#separate-connection[separate connection], you can now, starting with version 2.3.2, configure the publishing connection factory to be a different type.
 By default, the publishing factory is the same type and any properties set on the main factory are also propagated to the publishing factory.
 
-Starting with version 3.1, the connectionCreatingBackOff property is supported to define backoff policy when creating connection channel.
+Starting with version 3.1, the `AbstractConnectionFactory` includes the `connectionCreatingBackOff` property, which supports a backoff policy in the connection module.
+Currently, this support in the behavior of `createChannel` to address exceptions when the channelMax limit is reached.
 
 [[pooledchannelconnectionfactory]]
 === `PooledChannelConnectionFactory`
